--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ body{
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #ffffff; /* You can choose a color or background image */
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.9);
   display: flex;
   justify-content: center;
   align-items: center;
