--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body{
 .loader {
   border: 8px solid #f3f3f3;
   border-top: 8px solid #3498db;
+  border-bottom: 8px solid #0ef;
   border-radius: 50%;
   width: 50px;
   height: 50px;
